manifest/dev/hydrate-dashboard-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hydrate-dashboard-ingres
  namespace: athari
spec:
  hosts:
    - 'app.dev.hydrate.net'
  gateways:
    - istio-system/hydrate-gateway
  http:
    - name: "hydrate-dashboard"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: hydrate-dashboard.athari.svc.cluster.local
            port:
              number: 80
